# SEMB

./: CMakeLists.txt  LICENSE  flake.nix
freertos-test/: CMakeLists.txt  FreeRTOSConfig.h  compile_commands.json  main.c
infrared-test/: CMakeLists.txt  IR_Commands.h  compile_commands.json  main.c
picow_blink/: CMakeLists.txt  picow_blink.c  picow_blink_slow_clock.c
project/: CMakeLists.txt  FreeRTOSConfig.h  compile_commands.json
project/src/: game.c  game.h  infrared.h  main.c  vga.c  vga.h
src/: CMakeLists.txt  compile_commands.json  game.c  game.h  infrared.c  infrared.h  main.c  scheduler.h  vga.c  vga.h
vga_test/: CMakeLists.txt  main.c  vga.c  vga.h  vga_test.c
